Improve AbstractUserApiTests and children
These tests originally used @BeforeEach and field
@Autowired calls. The @BeforeEach made the tests
more expensive than needed to be and the
@Autowired field calls is no longer recommended.